# platform-conductor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-health-check.yml  weekly-report.yml
docs/: governance-report.json  health-report.json
docs/adr/: README.md
docs/reports/: weekly-2026-04-20.md  weekly-2026-04-27.md  weekly-2026-05-04.md  weekly-2026-05-11.md  weekly-2026-05-18.md  weekly-2026-05-25.md  weekly-2026-06-01.md  weekly-2026-06-08.md  weekly-2026-06-15.md  weekly-2026-06-22.md  weekly-2026-06-29.md  weekly-2026-07-06.md  weekly-2026-07-13.md  weekly-2026-07-20.md
scripts/: governance_report.py  nightly_health_check.py  weekly_report.py
src/conductor/: __init__.py  cli.py
src/conductor/agents/: failure_detector.py
src/conductor/core/: config.py  models.py
src/conductor/governance/: scorecard.py
src/conductor/monitors/: github.py
src/conductor/reporters/: discussions.py  weekly.py
tests/: test_config.py  test_governance.py  test_models.py  test_monitor.py  test_reporters.py
